--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>Odin - Library</title>
 </head>
 <body>
+    <form action="" id="form">
+        <label for="title">Title</label>
+        <input type="text" id="title" required>
+
+        <label for="author">Author</label>
+        <input type="text" id="author" required>
+    </form>
+
+    <button form="form" id="btnAdd">Add</button>
+    
     <script src="script.js"></script>
 </body>
 </html>
