Add function that show the books

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     </form>
 
     <button form="form" id="btnAdd">Add</button>
+
+    <div id="container">
+        
+    </div>
     
     <script src="script.js"></script>
 </body>
