Update function that show books

--- a/index.html
+++ b/index.html
@@ -7,20 +7,24 @@
     <title>Odin - Library</title>
 </head>
 <body>
-    <form action="" id="form">
+    <h1>Odin Library</h1>
+    <!-- <form action="" id="form">
         <label for="title">Title</label>
         <input type="text" id="title" required>
 
         <label for="author">Author</label>
         <input type="text" id="author" required>
-    </form>
+    </form> -->
 
-    <button form="form" id="btnAdd">Add</button>
+    <!-- <button form="form" id="btnAdd">Add</button> -->
 
-    <div id="container">
-        
+    <button type="button">Add new book</button>
+
+    <div id="cardContainer">
+        <!-- Cards add with JS -->
     </div>
-    
+
+
     <script src="script.js"></script>
 </body>
 </html>
