--- a/index.html
+++ b/index.html
@@ -8,22 +8,63 @@
 </head>
 <body>
     <h1>Odin Library</h1>
-    <!-- <form action="" id="form">
-        <label for="title">Title</label>
-        <input type="text" id="title" required>
 
-        <label for="author">Author</label>
-        <input type="text" id="author" required>
-    </form> -->
-
-    <!-- <button form="form" id="btnAdd">Add</button> -->
-
-    <button type="button">Add new book</button>
+    <button type="button" id="buttonModal">Add new book</button>
 
     <div id="cardContainer">
         <!-- Cards add with JS -->
     </div>
 
+    <dialog>
+        <h2>Add new book</h2>
+
+        <form action="" id="form" method="dialog">
+        <label for="title">
+            Title
+            <br>
+            <input type="text" id="title" required>
+        </label>
+
+        <br>
+        <br>
+
+        <label for="author">
+            Author
+            <br>
+            <input type="text" id="author" required>
+        </label>
+
+        <br>
+        <br>
+
+        <label for="pages">
+            Number of pages
+            <br>
+            <input type="number" id="pages" required>
+        </label>
+
+        <br>
+        <br>
+
+        <div>
+            <p>Status of the book</p>
+            
+            <label for="Read">
+                <input type="radio" id="Read" name="status" value="Read">
+                Read
+            </label>
+    
+            <label for="NotRead">
+                <input type="radio" name="status" id="NotRead" value="Not Read">
+                Not Read
+            </label>
+        </div>
+
+    </form>
+
+    <button form="form" id="btnAdd">Save</button>
+
+    </dialog>
 
     <script src="script.js"></script>
 </body>
