--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Odin - Library</title>
 </head>
 <body>
     <h1>Odin Library</h1>
 
+    <!-- <span class="material-symbols-outlined">
+        heart_minus
+        </span> -->
     <button type="button" id="buttonModal">Add new book</button>
 
     <div id="cardContainer">
@@ -16,6 +20,9 @@
     </div>
 
     <dialog>
+        <span id="btnClose" class="material-symbols-outlined">
+            close
+        </span>
         <h2>Add new book</h2>
 
         <form action="" id="form" method="dialog">
